build/transformers/v4.14.1/en/model_doc/detr.mdx
---
local: detr
sections:
- local: overview
  title: Overview
- local: transformers.models.detr.modeling_detr.DetrModelOutput
  title: DETR specific outputs
- local: transformers.DetrConfig
  title: DetrConfig
- local: transformers.DetrFeatureExtractor
  title: DetrFeatureExtractor
- local: transformers.DetrModel
  title: DetrModel
- local: transformers.DetrForObjectDetection
  title: DetrForObjectDetection
- local: transformers.DetrForSegmentation
  title: DetrForSegmentation
title: DETR
---
<script>
import Tip from "./Tip.svelte";
import Youtube from "./Youtube.svelte";
import Docstring from "./Docstring.svelte";
import CodeBlock from "./CodeBlock.svelte";
import CodeBlockFw from "./CodeBlockFw.svelte";
import ColabDropdown from "./ColabDropdown.svelte";
import IconCopyLink from "./IconCopyLink.svelte";
export let fw: "pt" | "tf"
</script>
<!--Copyright 2021 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

<h1 id="detr">DETR</h1>

<h2 id="overview">Overview</h2>

The DETR model was proposed in [End-to-End Object Detection with Transformers](https://arxiv.org/abs/2005.12872) by
Nicolas Carion, Francisco Massa, Gabriel Synnaeve, Nicolas Usunier, Alexander Kirillov and Sergey Zagoruyko. DETR
consists of a convolutional backbone followed by an encoder-decoder Transformer which can be trained end-to-end for
object detection. It greatly simplifies a lot of the complexity of models like Faster-R-CNN and Mask-R-CNN, which use
things like region proposals, non-maximum suppression procedure and anchor generation. Moreover, DETR can also be
naturally extended to perform panoptic segmentation, by simply adding a mask head on top of the decoder outputs.

The abstract from the paper is the following:

*We present a new method that views object detection as a direct set prediction problem. Our approach streamlines the
detection pipeline, effectively removing the need for many hand-designed components like a non-maximum suppression
procedure or anchor generation that explicitly encode our prior knowledge about the task. The main ingredients of the
new framework, called DEtection TRansformer or DETR, are a set-based global loss that forces unique predictions via
bipartite matching, and a transformer encoder-decoder architecture. Given a fixed small set of learned object queries,
DETR reasons about the relations of the objects and the global image context to directly output the final set of
predictions in parallel. The new model is conceptually simple and does not require a specialized library, unlike many
other modern detectors. DETR demonstrates accuracy and run-time performance on par with the well-established and
highly-optimized Faster RCNN baseline on the challenging COCO object detection dataset. Moreover, DETR can be easily
generalized to produce panoptic segmentation in a unified manner. We show that it significantly outperforms competitive
baselines.*

This model was contributed by [nielsr](https://huggingface.co/nielsr). The original code can be found [here](https://github.com/facebookresearch/detr).

The quickest way to get started with DETR is by checking the [example notebooks](https://github.com/NielsRogge/Transformers-Tutorials/tree/master/DETR) (which showcase both inference and
fine-tuning on custom data).

Here's a TLDR explaining how [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) works:

First, an image is sent through a pre-trained convolutional backbone (in the paper, the authors use
ResNet-50/ResNet-101). Let's assume we also add a batch dimension. This means that the input to the backbone is a
tensor of shape `(batch_size, 3, height, width)`, assuming the image has 3 color channels (RGB). The CNN backbone
outputs a new lower-resolution feature map, typically of shape `(batch_size, 2048, height/32, width/32)`. This is
then projected to match the hidden dimension of the Transformer of DETR, which is `256` by default, using a
`nn.Conv2D` layer. So now, we have a tensor of shape `(batch_size, 256, height/32, width/32).` Next, the
feature map is flattened and transposed to obtain a tensor of shape `(batch_size, seq_len, d_model)` =
`(batch_size, width/32*height/32, 256)`. So a difference with NLP models is that the sequence length is actually
longer than usual, but with a smaller `d_model` (which in NLP is typically 768 or higher).

Next, this is sent through the encoder, outputting `encoder_hidden_states` of the same shape (you can consider
these as image features). Next, so-called **object queries** are sent through the decoder. This is a tensor of shape
`(batch_size, num_queries, d_model)`, with `num_queries` typically set to 100 and initialized with zeros.
These input embeddings are learnt positional encodings that the authors refer to as object queries, and similarly to
the encoder, they are added to the input of each attention layer. Each object query will look for a particular object
in the image. The decoder updates these embeddings through multiple self-attention and encoder-decoder attention layers
to output `decoder_hidden_states` of the same shape: `(batch_size, num_queries, d_model)`. Next, two heads
are added on top for object detection: a linear layer for classifying each object query into one of the objects or "no
object", and a MLP to predict bounding boxes for each query.

The model is trained using a **bipartite matching loss**: so what we actually do is compare the predicted classes +
bounding boxes of each of the N = 100 object queries to the ground truth annotations, padded up to the same length N
(so if an image only contains 4 objects, 96 annotations will just have a "no object" as class and "no bounding box" as
bounding box). The [Hungarian matching algorithm](https://en.wikipedia.org/wiki/Hungarian_algorithm) is used to find
an optimal one-to-one mapping of each of the N queries to each of the N annotations. Next, standard cross-entropy (for
the classes) and a linear combination of the L1 and [generalized IoU loss](https://giou.stanford.edu/) (for the
bounding boxes) are used to optimize the parameters of the model.

DETR can be naturally extended to perform panoptic segmentation (which unifies semantic segmentation and instance
segmentation). [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) adds a segmentation mask head on top of
[DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection). The mask head can be trained either jointly, or in a two steps process,
where one first trains a [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) model to detect bounding boxes around both
"things" (instances) and "stuff" (background things like trees, roads, sky), then freeze all the weights and train only
the mask head for 25 epochs. Experimentally, these two approaches give similar results. Note that predicting boxes is
required for the training to be possible, since the Hungarian matching is computed using distances between boxes.

Tips:

- DETR uses so-called **object queries** to detect objects in an image. The number of queries determines the maximum
  number of objects that can be detected in a single image, and is set to 100 by default (see parameter
  `num_queries` of [DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)). Note that it's good to have some slack (in COCO, the
  authors used 100, while the maximum number of objects in a COCO image is ~70).
- The decoder of DETR updates the query embeddings in parallel. This is different from language models like GPT-2,
  which use autoregressive decoding instead of parallel. Hence, no causal attention mask is used.
- DETR adds position embeddings to the hidden states at each self-attention and cross-attention layer before projecting
  to queries and keys. For the position embeddings of the image, one can choose between fixed sinusoidal or learned
  absolute position embeddings. By default, the parameter `position_embedding_type` of
  [DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig) is set to `"sine"`.
- During training, the authors of DETR did find it helpful to use auxiliary losses in the decoder, especially to help
  the model output the correct number of objects of each class. If you set the parameter `auxiliary_loss` of
  [DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig) to `True`, then prediction feedforward neural networks and Hungarian losses
  are added after each decoder layer (with the FFNs sharing parameters).
- If you want to train the model in a distributed environment across multiple nodes, then one should update the
  _num_boxes_ variable in the _DetrLoss_ class of _modeling_detr.py_. When training on multiple nodes, this should be
  set to the average number of target boxes across all nodes, as can be seen in the original implementation [here](https://github.com/facebookresearch/detr/blob/a54b77800eb8e64e3ad0d8237789fcbf2f8350c5/models/detr.py#L227-L232).
- [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) and [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) can be initialized with
  any convolutional backbone available in the [timm library](https://github.com/rwightman/pytorch-image-models).
  Initializing with a MobileNet backbone for example can be done by setting the `backbone` attribute of
  [DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig) to `"tf_mobilenetv3_small_075"`, and then initializing the model with that
  config.
- DETR resizes the input images such that the shortest side is at least a certain amount of pixels while the longest is
  at most 1333 pixels. At training time, scale augmentation is used such that the shortest side is randomly set to at
  least 480 and at most 800 pixels. At inference time, the shortest side is set to 800. One can use
  [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) to prepare images (and optional annotations in COCO format) for the
  model. Due to this resizing, images in a batch can have different sizes. DETR solves this by padding images up to the
  largest size in a batch, and by creating a pixel mask that indicates which pixels are real/which are padding.
  Alternatively, one can also define a custom `collate_fn` in order to batch images together, using
  [pad_and_create_pixel_mask()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.pad_and_create_pixel_mask).
- The size of the images will determine the amount of memory being used, and will thus determine the `batch_size`.
  It is advised to use a batch size of 2 per GPU. See [this Github thread](https://github.com/facebookresearch/detr/issues/150) for more info.

As a summary, consider the following table:

| Task | Object detection | Instance segmentation | Panoptic segmentation |
|------|------------------|-----------------------|-----------------------|
| **Description** | Predicting bounding boxes and class labels around objects in an image | Predicting masks around objects (i.e. instances) in an image | Predicting masks around both objects (i.e. instances) as well as "stuff" (i.e. background things like trees and roads) in an image |
| **Model** | [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) | [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) | [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) |
| **Example dataset** | COCO detection | COCO detection, COCO panoptic | COCO panoptic  |                                                                        |
| **Format of annotations to provide to**  [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) | &amp;lcub;'image_id': `int`, 'annotations': `List[Dict]`} each Dict being a COCO object annotation  | &amp;lcub;'image_id': `int`, 'annotations': `List[Dict]`}  (in case of COCO detection) or &amp;lcub;'file_name': `str`, 'image_id': `int`, 'segments_info': `List[Dict]`} (in case of COCO panoptic) | &amp;lcub;'file_name': `str`, 'image_id': `int`, 'segments_info': `List[Dict]`} and masks_path (path to directory containing PNG files of the masks) |
| **Postprocessing** (i.e. converting the output of the model to COCO API) | [post_process()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process) | [post_process_segmentation()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_segmentation) | [post_process_segmentation()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_segmentation), [post_process_panoptic()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_panoptic) |
| **evaluators** | `CocoEvaluator` with `iou_types="bbox"` | `CocoEvaluator` with `iou_types="bbox"` or `"segm"` | `CocoEvaluator` with `iou_tupes="bbox"` or `"segm"`, `PanopticEvaluator` |

In short, one should prepare the data either in COCO detection or COCO panoptic format, then use
[DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) to create `pixel_values`, `pixel_mask` and optional
`labels`, which can then be used to train (or fine-tune) a model. For evaluation, one should first convert the
outputs of the model using one of the postprocessing methods of [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor). These can
be be provided to either `CocoEvaluator` or `PanopticEvaluator`, which allow you to calculate metrics like
mean Average Precision (mAP) and Panoptic Quality (PQ). The latter objects are implemented in the [original repository](https://github.com/facebookresearch/detr). See the [example notebooks](https://github.com/NielsRogge/Transformers-Tutorials/tree/master/DETR) for more info regarding evaluation.


<h2 id="transformers.models.detr.modeling_detr.DetrModelOutput">DETR specific outputs</h2>

<div class="docstring">

<docstring><name>class transformers.models.detr.modeling\_detr.DetrModelOutput</name><anchor>transformers.models.detr.modeling_detr.DetrModelOutput</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L94</source><parameters>[{"name": "last_hidden_state", "val": ": FloatTensor = None"}, {"name": "past_key_values", "val": ": typing.Optional[typing.Tuple[typing.Tuple[torch.FloatTensor]]] = None"}, {"name": "decoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "decoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "cross_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_last_hidden_state", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "encoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "intermediate_hidden_states", "val": ": typing.Optional[torch.FloatTensor] = None"}]</parameters><paramsdesc>- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) --
  Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **intermediate_hidden_states** (`torch.FloatTensor` of shape `(config.decoder_layers, batch_size, sequence_length, hidden_size)`, _optional_, returned when `config.auxiliary_loss=True`) --
  Intermediate decoder activations, i.e. the output of each decoder layer, each of them gone through a
  layernorm.</paramsdesc><paramgroups>0</paramgroups></docstring>

Base class for outputs of the DETR encoder-decoder model. This class adds one attribute to Seq2SeqModelOutput,
namely an optional stack of intermediate decoder activations, i.e. the output of each decoder layer, each of them
gone through a layernorm. This is useful when training the model with auxiliary decoding losses.




</div>

<div class="docstring">

<docstring><name>class transformers.models.detr.modeling\_detr.DetrObjectDetectionOutput</name><anchor>transformers.models.detr.modeling_detr.DetrObjectDetectionOutput</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L134</source><parameters>[{"name": "loss", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "loss_dict", "val": ": typing.Optional[typing.Dict] = None"}, {"name": "logits", "val": ": FloatTensor = None"}, {"name": "pred_boxes", "val": ": FloatTensor = None"}, {"name": "auxiliary_outputs", "val": ": typing.Optional[typing.List[typing.Dict]] = None"}, {"name": "last_hidden_state", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "decoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "decoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "cross_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_last_hidden_state", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "encoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}]</parameters><paramsdesc>- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` are provided)) --
  Total loss as a linear combination of a negative log-likehood (cross-entropy) for class prediction and a
  bounding box loss. The latter is defined as a linear combination of the L1 loss and the generalized
  scale-invariant IoU loss.
- **loss_dict** (`Dict`, _optional_) --
  A dictionary containing the individual losses. Useful for logging.
- **logits** (`torch.FloatTensor` of shape `(batch_size, num_queries, num_classes + 1)`) --
  Classification logits (including no-object) for all queries.
- **pred_boxes** (`torch.FloatTensor` of shape `(batch_size, num_queries, 4)`) --
  Normalized boxes coordinates for all queries, represented as (center_x, center_y, width, height). These
  values are normalized in [0, 1], relative to the size of each individual image in the batch (disregarding
  possible padding). You can use [post_process()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process) to retrieve the
  unnormalized bounding boxes.
- **auxiliary_outputs** (`list[Dict]`, _optional_) --
  Optional, only returned when auxilary losses are activated (i.e. `config.auxiliary_loss` is set to
  _True_) and labels are provided. It is a list of dictionaries containing the two above keys (`logits`
  and `pred_boxes`) for each decoder layer.
- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Output type of [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection).




</div>

<div class="docstring">

<docstring><name>class transformers.models.detr.modeling\_detr.DetrSegmentationOutput</name><anchor>transformers.models.detr.modeling_detr.DetrSegmentationOutput</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L197</source><parameters>[{"name": "loss", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "loss_dict", "val": ": typing.Optional[typing.Dict] = None"}, {"name": "logits", "val": ": FloatTensor = None"}, {"name": "pred_boxes", "val": ": FloatTensor = None"}, {"name": "pred_masks", "val": ": FloatTensor = None"}, {"name": "auxiliary_outputs", "val": ": typing.Optional[typing.List[typing.Dict]] = None"}, {"name": "last_hidden_state", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "decoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "decoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "cross_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_last_hidden_state", "val": ": typing.Optional[torch.FloatTensor] = None"}, {"name": "encoder_hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "encoder_attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}]</parameters><paramsdesc>- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` are provided)) --
  Total loss as a linear combination of a negative log-likehood (cross-entropy) for class prediction and a
  bounding box loss. The latter is defined as a linear combination of the L1 loss and the generalized
  scale-invariant IoU loss.
- **loss_dict** (`Dict`, _optional_) --
  A dictionary containing the individual losses. Useful for logging.
- **logits** (`torch.FloatTensor` of shape `(batch_size, num_queries, num_classes + 1)`) --
  Classification logits (including no-object) for all queries.
- **pred_boxes** (`torch.FloatTensor` of shape `(batch_size, num_queries, 4)`) --
  Normalized boxes coordinates for all queries, represented as (center_x, center_y, width, height). These
  values are normalized in [0, 1], relative to the size of each individual image in the batch (disregarding
  possible padding). You can use [post_process()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process) to retrieve the
  unnormalized bounding boxes.
- **pred_masks** (`torch.FloatTensor` of shape `(batch_size, num_queries, height/4, width/4)`) --
  Segmentation masks logits for all queries. See also
  [post_process_segmentation()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_segmentation) or
  [post_process_panoptic()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_panoptic) to evaluate instance and panoptic
  segmentation masks respectively.
- **auxiliary_outputs** (`list[Dict]`, _optional_) --
  Optional, only returned when auxiliary losses are activated (i.e. `config.auxiliary_loss` is set to
  _True_) and labels are provided. It is a list of dictionaries containing the two above keys (`logits`
  and `pred_boxes`) for each decoder layer.
- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Output type of [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation).




</div>

<h2 id="transformers.DetrConfig">DetrConfig</h2>

<div class="docstring">

<docstring><name>class transformers.DetrConfig</name><anchor>transformers.DetrConfig</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/configuration_detr.py#L29</source><parameters>[{"name": "num_queries", "val": " = 100"}, {"name": "max_position_embeddings", "val": " = 1024"}, {"name": "encoder_layers", "val": " = 6"}, {"name": "encoder_ffn_dim", "val": " = 2048"}, {"name": "encoder_attention_heads", "val": " = 8"}, {"name": "decoder_layers", "val": " = 6"}, {"name": "decoder_ffn_dim", "val": " = 2048"}, {"name": "decoder_attention_heads", "val": " = 8"}, {"name": "encoder_layerdrop", "val": " = 0.0"}, {"name": "decoder_layerdrop", "val": " = 0.0"}, {"name": "is_encoder_decoder", "val": " = True"}, {"name": "activation_function", "val": " = 'relu'"}, {"name": "d_model", "val": " = 256"}, {"name": "dropout", "val": " = 0.1"}, {"name": "attention_dropout", "val": " = 0.0"}, {"name": "activation_dropout", "val": " = 0.0"}, {"name": "init_std", "val": " = 0.02"}, {"name": "init_xavier_std", "val": " = 1.0"}, {"name": "classifier_dropout", "val": " = 0.0"}, {"name": "scale_embedding", "val": " = False"}, {"name": "auxiliary_loss", "val": " = False"}, {"name": "position_embedding_type", "val": " = 'sine'"}, {"name": "backbone", "val": " = 'resnet50'"}, {"name": "dilation", "val": " = False"}, {"name": "class_cost", "val": " = 1"}, {"name": "bbox_cost", "val": " = 5"}, {"name": "giou_cost", "val": " = 2"}, {"name": "mask_loss_coefficient", "val": " = 1"}, {"name": "dice_loss_coefficient", "val": " = 1"}, {"name": "bbox_loss_coefficient", "val": " = 5"}, {"name": "giou_loss_coefficient", "val": " = 2"}, {"name": "eos_coefficient", "val": " = 0.1"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **num_queries** (`int`, _optional_, defaults to 100) --
  Number of object queries, i.e. detection slots. This is the maximal number of objects
  [DetrModel](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrModel) can detect in a single image. For COCO, we recommend 100 queries.
- **d_model** (`int`, _optional_, defaults to 256) --
  Dimension of the layers.
- **encoder_layers** (`int`, _optional_, defaults to 6) --
  Number of encoder layers.
- **decoder_layers** (`int`, _optional_, defaults to 6) --
  Number of decoder layers.
- **encoder_attention_heads** (`int`, _optional_, defaults to 8) --
  Number of attention heads for each attention layer in the Transformer encoder.
- **decoder_attention_heads** (`int`, _optional_, defaults to 8) --
  Number of attention heads for each attention layer in the Transformer decoder.
- **decoder_ffn_dim** (`int`, _optional_, defaults to 2048) --
  Dimension of the "intermediate" (often named feed-forward) layer in decoder.
- **encoder_ffn_dim** (`int`, _optional_, defaults to 2048) --
  Dimension of the "intermediate" (often named feed-forward) layer in decoder.
- **activation_function** (`str` or `function`, _optional_, defaults to `"relu"`) --
  The non-linear activation function (function or string) in the encoder and pooler. If string,
  `"gelu"`, `"relu"`, `"silu"` and `"gelu_new"` are supported.
- **dropout** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, encoder, and pooler.
- **attention_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout ratio for the attention probabilities.
- **activation_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout ratio for activations inside the fully connected layer.
- **init_std** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
- **init_xavier_std** (`float`, _optional_, defaults to 1) --
  The scaling factor used for the Xavier initialization gain in the HM Attention map module.
  encoder_layerdrop -- (`float`, _optional_, defaults to 0.0):
  The LayerDrop probability for the encoder. See the [LayerDrop paper](see
  https://arxiv.org/abs/1909.11556) for more details.
  decoder_layerdrop -- (`float`, _optional_, defaults to 0.0):
  The LayerDrop probability for the decoder. See the [LayerDrop paper](see
  https://arxiv.org/abs/1909.11556) for more details.
- **auxiliary_loss** (`bool`, _optional_, defaults to `False`) --
  Whether auxiliary decoding losses (loss at each decoder layer) are to be used.
- **position_embedding_type** (`str`, _optional_, defaults to `"sine"`) --
  Type of position embeddings to be used on top of the image features. One of `"sine"` or
  `"learned"`.
- **backbone** (`str`, _optional_, defaults to `"resnet50"`) --
  Name of convolutional backbone to use. Supports any convolutional backbone from the timm package. For a
  list of all available models, see [this page](https://rwightman.github.io/pytorch-image-models/#load-a-pretrained-model).
- **dilation** (`bool`, _optional_, defaults to `False`) --
  Whether to replace stride with dilation in the last convolutional block (DC5).
- **class_cost** (`float`, _optional_, defaults to 1) --
  Relative weight of the classification error in the Hungarian matching cost.
- **bbox_cost** (`float`, _optional_, defaults to 5) --
  Relative weight of the L1 error of the bounding box coordinates in the Hungarian matching cost.
- **giou_cost** (`float`, _optional_, defaults to 2) --
  Relative weight of the generalized IoU loss of the bounding box in the Hungarian matching cost.
- **mask_loss_coefficient** (`float`, _optional_, defaults to 1) --
  Relative weight of the Focal loss in the panoptic segmentation loss.
- **dice_loss_coefficient** (`float`, _optional_, defaults to 1) --
  Relative weight of the DICE/F-1 loss in the panoptic segmentation loss.
- **bbox_loss_coefficient** (`float`, _optional_, defaults to 5) --
  Relative weight of the L1 bounding box loss in the object detection loss.
- **giou_loss_coefficient** (`float`, _optional_, defaults to 2) --
  Relative weight of the generalized IoU loss in the object detection loss.
- **eos_coefficient** (`float`, _optional_, defaults to 0.1) --
  Relative classification weight of the 'no-object' class in the object detection loss.</paramsdesc><paramgroups>0</paramgroups></docstring>

This is the configuration class to store the configuration of a [DetrModel](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrModel). It is used to
instantiate a DETR model according to the specified arguments, defining the model architecture. Instantiating a
configuration with the defaults will yield a similar configuration to that of the DETR [facebook/detr-resnet-50](https://huggingface.co/facebook/detr-resnet-50) architecture.

Configuration objects inherit from [PretrainedConfig](/docs/transformers/v4.14.1/en/main_classes/configuration#transformers.PretrainedConfig) and can be used to control the model
outputs. Read the documentation from [PretrainedConfig](/docs/transformers/v4.14.1/en/main_classes/configuration#transformers.PretrainedConfig) for more information.




Examples:

```python
>>> from transformers import DetrModel, DetrConfig

>>> # Initializing a DETR facebook/detr-resnet-50 style configuration
>>> configuration = DetrConfig()

>>> # Initializing a model from the facebook/detr-resnet-50 style configuration
>>> model = DetrModel(configuration)

>>> # Accessing the model configuration
>>> configuration = model.config
```


</div>

<h2 id="transformers.DetrFeatureExtractor">DetrFeatureExtractor</h2>

<div class="docstring">

<docstring><name>class transformers.DetrFeatureExtractor</name><anchor>transformers.DetrFeatureExtractor</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L123</source><parameters>[{"name": "format", "val": " = 'coco_detection'"}, {"name": "do_resize", "val": " = True"}, {"name": "size", "val": " = 800"}, {"name": "max_size", "val": " = 1333"}, {"name": "do_normalize", "val": " = True"}, {"name": "image_mean", "val": " = None"}, {"name": "image_std", "val": " = None"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **format** (`str`, _optional_, defaults to `"coco_detection"`) --
  Data format of the annotations. One of "coco_detection" or "coco_panoptic".
- **do_resize** (`bool`, _optional_, defaults to `True`) --
  Whether to resize the input to a certain `size`.
- **size** (`int`, _optional_, defaults to 800) --
  Resize the input to the given size. Only has an effect if `do_resize` is set to `True`. If size
  is a sequence like `(width, height)`, output size will be matched to this. If size is an int, smaller
  edge of the image will be matched to this number. i.e, if `height > width`, then image will be
  rescaled to `(size * height / width, size)`.
- **max_size** (`int`, _optional_, defaults to `1333`) --
  The largest size an image dimension can have (otherwise it's capped). Only has an effect if
  `do_resize` is set to `True`.
- **do_normalize** (`bool`, _optional_, defaults to `True`) --
  Whether or not to normalize the input with mean and standard deviation.
- **image_mean** (`int`, _optional_, defaults to `[0.485, 0.456, 0.406]`) --
  The sequence of means for each channel, to be used when normalizing images. Defaults to the ImageNet mean.
- **image_std** (`int`, _optional_, defaults to `[0.229, 0.224, 0.225]`) --
  The sequence of standard deviations for each channel, to be used when normalizing images. Defaults to the
  ImageNet std.</paramsdesc><paramgroups>0</paramgroups></docstring>

Constructs a DETR feature extractor.

This feature extractor inherits from `FeatureExtractionMixin` which contains most of the main
methods. Users should refer to this superclass for more information regarding those methods.






<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.DetrFeatureExtractor.__call__</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L404</source><parameters>[{"name": "images", "val": ": typing.Union[PIL.Image.Image, numpy.ndarray, ForwardRef('torch.Tensor'), typing.List[PIL.Image.Image], typing.List[numpy.ndarray], typing.List[ForwardRef('torch.Tensor')]]"}, {"name": "annotations", "val": ": typing.Union[typing.List[typing.Dict], typing.List[typing.List[typing.Dict]]] = None"}, {"name": "return_segmentation_masks", "val": ": typing.Optional[bool] = False"}, {"name": "masks_path", "val": ": typing.Optional[pathlib.Path] = None"}, {"name": "pad_and_return_pixel_mask", "val": ": typing.Optional[bool] = True"}, {"name": "return_tensors", "val": ": typing.Union[str, transformers.file_utils.TensorType, NoneType] = None"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **images** (`PIL.Image.Image`, `np.ndarray`, `torch.Tensor`, `List[PIL.Image.Image]`, `List[np.ndarray]`, `List[torch.Tensor]`) --
  The image or batch of images to be prepared. Each image can be a PIL image, NumPy array or PyTorch
  tensor. In case of a NumPy array/PyTorch tensor, each image should be of shape (C, H, W), where C is a
  number of channels, H and W are image height and width.

- **annotations** (`Dict`, `List[Dict]`, _optional_) --
  The corresponding annotations in COCO format.

  In case [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) was initialized with `format = "coco_detection"`, the annotations for each image should have the following format: &amp;lcub;'image_id': int,
  'annotations': [annotation]}, with the annotations being a list of COCO object annotations.

  In case [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) was initialized with `format = "coco_panoptic"`, the annotations for each image should have the following format: &amp;lcub;'image_id': int,
  'file_name': str, 'segments_info': [segment_info]} with segments_info being a list of COCO panoptic
  annotations.

- **return_segmentation_masks** (`Dict`, `List[Dict]`, _optional_, defaults to `False`) --
  Whether to also include instance segmentation masks as part of the labels in case `format = "coco_detection"`.

- **masks_path** (`pathlib.Path`, _optional_) --
  Path to the directory containing the PNG files that store the class-agnostic image segmentations. Only
  relevant in case [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor) was initialized with `format = "coco_panoptic"`.

- **pad_and_return_pixel_mask** (`bool`, _optional_, defaults to `True`) --
  Whether or not to pad images up to the largest image in a batch and create a pixel mask.

  If left to the default, will return a pixel mask that is:

  - 1 for pixels that are real (i.e. **not masked**),
  - 0 for pixels that are padding (i.e. **masked**).

- **return_tensors** (`str` or [TensorType](/docs/transformers/v4.14.1/en/internal/file_utils#transformers.TensorType), _optional_) --
  If set, will return tensors instead of NumPy arrays. If set to `'pt'`, return PyTorch
  `torch.Tensor` objects.</paramsdesc><paramgroups>0</paramgroups><rettype>[BatchFeature](/docs/transformers/v4.14.1/en/main_classes/feature_extractor#transformers.BatchFeature)</rettype><retdesc>A [BatchFeature](/docs/transformers/v4.14.1/en/main_classes/feature_extractor#transformers.BatchFeature) with the following fields:

- **pixel_values** -- Pixel values to be fed to a model.
- **pixel_mask** -- Pixel mask to be fed to a model (when `pad_and_return_pixel_mask=True` or if
  _"pixel_mask"_ is in `self.model_input_names`).
- **labels** -- Optional labels to be fed to a model (when `annotations` are provided)</retdesc></docstring>

Main method to prepare for the model one or several image(s) and optional annotations. Images are by default
padded up to the largest image in a batch, and a pixel mask is created that indicates which pixels are
real/which are padding.

<Tip warning={true}>

NumPy arrays and PyTorch tensors are converted to PIL images when resizing, so the most efficient is to pass
PIL images.

</Tip>








</div>
<div class="docstring">
<docstring><name>pad\_and\_create\_pixel\_mask</name><anchor>transformers.DetrFeatureExtractor.pad_and_create_pixel_mask</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L633</source><parameters>[{"name": "pixel_values_list", "val": ": typing.List[ForwardRef('torch.Tensor')]"}, {"name": "return_tensors", "val": ": typing.Union[str, transformers.file_utils.TensorType, NoneType] = None"}]</parameters><paramsdesc>- **pixel_values_list** (`List[torch.Tensor]`) --
  List of images (pixel values) to be padded. Each image should be a tensor of shape (C, H, W).
- **return_tensors** (`str` or [TensorType](/docs/transformers/v4.14.1/en/internal/file_utils#transformers.TensorType), _optional_) --
  If set, will return tensors instead of NumPy arrays. If set to `'pt'`, return PyTorch
  `torch.Tensor` objects.</paramsdesc><paramgroups>0</paramgroups><rettype>[BatchFeature](/docs/transformers/v4.14.1/en/main_classes/feature_extractor#transformers.BatchFeature)</rettype><retdesc>A [BatchFeature](/docs/transformers/v4.14.1/en/main_classes/feature_extractor#transformers.BatchFeature) with the following fields:

- **pixel_values** -- Pixel values to be fed to a model.
- **pixel_mask** -- Pixel mask to be fed to a model (when `pad_and_return_pixel_mask=True` or if
  _"pixel_mask"_ is in `self.model_input_names`).</retdesc></docstring>

Pad images up to the largest image in a batch and create a corresponding `pixel_mask`.








</div>
<div class="docstring">
<docstring><name>post\_process</name><anchor>transformers.DetrFeatureExtractor.post_process</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L677</source><parameters>[{"name": "outputs", "val": ""}, {"name": "target_sizes", "val": ""}]</parameters><paramsdesc>- **outputs** (`DetrObjectDetectionOutput`) --
  Raw outputs of the model.
- **target_sizes** (`torch.Tensor` of shape `(batch_size, 2)`, _optional_) --
  Tensor containing the size (h, w) of each image of the batch. For evaluation, this must be the original
  image size (before any data augmentation). For visualization, this should be the image size after data
  augment, but before padding.</paramsdesc><paramgroups>0</paramgroups><rettype>`List[Dict]`</rettype><retdesc>A list of dictionaries, each dictionary containing the scores, labels and boxes for an
image in the batch as predicted by the model.</retdesc></docstring>

Converts the output of [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) into the format expected by the COCO api.
Only supports PyTorch.








</div>
<div class="docstring">
<docstring><name>post\_process\_segmentation</name><anchor>transformers.DetrFeatureExtractor.post_process_segmentation</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L715</source><parameters>[{"name": "outputs", "val": ""}, {"name": "target_sizes", "val": ""}, {"name": "threshold", "val": " = 0.9"}, {"name": "mask_threshold", "val": " = 0.5"}]</parameters><paramsdesc>- **outputs** (`DetrSegmentationOutput`) --
  Raw outputs of the model.
- **target_sizes** (`torch.Tensor` of shape `(batch_size, 2)` or `List[Tuple]` of length `batch_size`) --
  Torch Tensor (or list) corresponding to the requested final size (h, w) of each prediction.
- **threshold** (`float`, _optional_, defaults to 0.9) --
  Threshold to use to filter out queries.
- **mask_threshold** (`float`, _optional_, defaults to 0.5) --
  Threshold to use when turning the predicted masks into binary values.</paramsdesc><paramgroups>0</paramgroups><rettype>`List[Dict]`</rettype><retdesc>A list of dictionaries, each dictionary containing the scores, labels, and masks for an
image in the batch as predicted by the model.</retdesc></docstring>

Converts the output of [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) into image segmentation predictions. Only
supports PyTorch.








</div>
<div class="docstring">
<docstring><name>post\_process\_panoptic</name><anchor>transformers.DetrFeatureExtractor.post_process_panoptic</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/feature_extraction_detr.py#L802</source><parameters>[{"name": "outputs", "val": ""}, {"name": "processed_sizes", "val": ""}, {"name": "target_sizes", "val": " = None"}, {"name": "is_thing_map", "val": " = None"}, {"name": "threshold", "val": " = 0.85"}]</parameters><paramsdesc>- **outputs** (`DetrSegmentationOutput`) --
  Raw outputs of the model.
- **processed_sizes** (`torch.Tensor` of shape `(batch_size, 2)` or `List[Tuple]` of length `batch_size`) --
  Torch Tensor (or list) containing the size (h, w) of each image of the batch, i.e. the size after data
  augmentation but before batching.
- **target_sizes** (`torch.Tensor` of shape `(batch_size, 2)` or `List[Tuple]` of length `batch_size`, _optional_) --
  Torch Tensor (or list) corresponding to the requested final size (h, w) of each prediction. If left to
  None, it will default to the `processed_sizes`.
- **is_thing_map** (`torch.Tensor` of shape `(batch_size, 2)`, _optional_) --
  Dictionary mapping class indices to either True or False, depending on whether or not they are a thing.
  If not set, defaults to the `is_thing_map` of COCO panoptic.
- **threshold** (`float`, _optional_, defaults to 0.85) --
  Threshold to use to filter out queries.</paramsdesc><paramgroups>0</paramgroups><rettype>`List[Dict]`</rettype><retdesc>A list of dictionaries, each dictionary containing a PNG string and segments_info values
for an image in the batch as predicted by the model.</retdesc></docstring>

Converts the output of [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) into actual panoptic predictions. Only
supports PyTorch.








</div></div>

<h2 id="transformers.DetrModel">DetrModel</h2>

<div class="docstring">

<docstring><name>class transformers.DetrModel</name><anchor>transformers.DetrModel</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1167</source><parameters>[{"name": "config", "val": ": DetrConfig"}]</parameters><paramsdesc>- **config** ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) --
  Model configuration class with all the parameters of the model. Initializing with a config file does not
  load the weights associated with the model, only the configuration. Check out the
  [from_pretrained()](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

The bare DETR Model (consisting of a backbone and encoder-decoder Transformer) outputting raw hidden-states without
any specific head on top.

This model inherits from [PreTrainedModel](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.DetrModel.forward</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1201</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "pixel_mask", "val": " = None"}, {"name": "decoder_attention_mask", "val": " = None"}, {"name": "encoder_outputs", "val": " = None"}, {"name": "inputs_embeds", "val": " = None"}, {"name": "decoder_inputs_embeds", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Padding will be ignored by default should you provide it.

  Pixel values can be obtained using [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor). See
  [transformers.DetrFeatureExtractor.__call__()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.__call__) for details.

- **pixel_mask** (`torch.LongTensor` of shape `(batch_size, height, width)`, _optional_) --
  Mask to avoid performing attention on padding pixel values. Mask values selected in `[0, 1]`:

  - 1 for pixels that are real (i.e. **not masked**),
  - 0 for pixels that are padding (i.e. **masked**).

  [What are attention masks?](../glossary#attention-mask)

- **decoder_attention_mask** (`torch.LongTensor` of shape `(batch_size, num_queries)`, _optional_) --
  Not used by default. Can be used to mask object queries.
- **encoder_outputs** (`tuple(tuple(torch.FloatTensor)`, _optional_) --
  Tuple consists of (`last_hidden_state`, _optional_: `hidden_states`, _optional_:
  `attentions`) `last_hidden_state` of shape `(batch_size, sequence_length, hidden_size)`,
  _optional_) is a sequence of hidden-states at the output of the last layer of the encoder. Used in the
  cross-attention of the decoder.
- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing the flattened feature map (output of the backbone + projection layer), you
  can choose to directly pass a flattened representation of an image.
- **decoder_inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, num_queries, hidden_size)`, _optional_) --
  Optionally, instead of initializing the queries with a tensor of zeros, you can choose to directly pass an
  embedded representation.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/v4.14.1/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.</paramsdesc><paramgroups>0</paramgroups><rettype>[DetrModelOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrModelOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [DetrModelOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrModelOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) and inputs.

- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) -- Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) -- Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **intermediate_hidden_states** (`torch.FloatTensor` of shape `(config.decoder_layers, batch_size, sequence_length, hidden_size)`, _optional_, returned when `config.auxiliary_loss=True`) -- Intermediate decoder activations, i.e. the output of each decoder layer, each of them gone through a
  layernorm.</retdesc></docstring>
The [DetrModel](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrModel) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import DetrFeatureExtractor, DetrModel
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = DetrFeatureExtractor.from_pretrained('facebook/detr-resnet-50')
>>> model = DetrModel.from_pretrained('facebook/detr-resnet-50')
>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> last_hidden_states = outputs.last_hidden_state
```






</div></div>

<h2 id="transformers.DetrForObjectDetection">DetrForObjectDetection</h2>

<div class="docstring">

<docstring><name>class transformers.DetrForObjectDetection</name><anchor>transformers.DetrForObjectDetection</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1324</source><parameters>[{"name": "config", "val": ": DetrConfig"}]</parameters><paramsdesc>- **config** ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) --
  Model configuration class with all the parameters of the model. Initializing with a config file does not
  load the weights associated with the model, only the configuration. Check out the
  [from_pretrained()](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

DETR Model (consisting of a backbone and encoder-decoder Transformer) with object detection heads on top, for tasks
such as COCO detection.

This model inherits from [PreTrainedModel](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.DetrForObjectDetection.forward</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1350</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "pixel_mask", "val": " = None"}, {"name": "decoder_attention_mask", "val": " = None"}, {"name": "encoder_outputs", "val": " = None"}, {"name": "inputs_embeds", "val": " = None"}, {"name": "decoder_inputs_embeds", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Padding will be ignored by default should you provide it.

  Pixel values can be obtained using [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor). See
  [transformers.DetrFeatureExtractor.__call__()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.__call__) for details.

- **pixel_mask** (`torch.LongTensor` of shape `(batch_size, height, width)`, _optional_) --
  Mask to avoid performing attention on padding pixel values. Mask values selected in `[0, 1]`:

  - 1 for pixels that are real (i.e. **not masked**),
  - 0 for pixels that are padding (i.e. **masked**).

  [What are attention masks?](../glossary#attention-mask)

- **decoder_attention_mask** (`torch.LongTensor` of shape `(batch_size, num_queries)`, _optional_) --
  Not used by default. Can be used to mask object queries.
- **encoder_outputs** (`tuple(tuple(torch.FloatTensor)`, _optional_) --
  Tuple consists of (`last_hidden_state`, _optional_: `hidden_states`, _optional_:
  `attentions`) `last_hidden_state` of shape `(batch_size, sequence_length, hidden_size)`,
  _optional_) is a sequence of hidden-states at the output of the last layer of the encoder. Used in the
  cross-attention of the decoder.
- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing the flattened feature map (output of the backbone + projection layer), you
  can choose to directly pass a flattened representation of an image.
- **decoder_inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, num_queries, hidden_size)`, _optional_) --
  Optionally, instead of initializing the queries with a tensor of zeros, you can choose to directly pass an
  embedded representation.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/v4.14.1/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`List[Dict]` of len `(batch_size,)`, _optional_) --
  Labels for computing the bipartite matching loss. List of dicts, each dictionary containing at least the
  following 2 keys: 'class_labels' and 'boxes' (the class labels and bounding boxes of an image in the batch
  respectively). The class labels themselves should be a `torch.LongTensor` of len `(number of bounding boxes in the image,)` and the boxes a `torch.FloatTensor` of shape `(number of bounding boxes in the image, 4)`.</paramsdesc><paramgroups>0</paramgroups><rettype>[DetrObjectDetectionOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrObjectDetectionOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [DetrObjectDetectionOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrObjectDetectionOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` are provided)) -- Total loss as a linear combination of a negative log-likehood (cross-entropy) for class prediction and a
  bounding box loss. The latter is defined as a linear combination of the L1 loss and the generalized
  scale-invariant IoU loss.
- **loss_dict** (`Dict`, _optional_) -- A dictionary containing the individual losses. Useful for logging.
- **logits** (`torch.FloatTensor` of shape `(batch_size, num_queries, num_classes + 1)`) -- Classification logits (including no-object) for all queries.
- **pred_boxes** (`torch.FloatTensor` of shape `(batch_size, num_queries, 4)`) -- Normalized boxes coordinates for all queries, represented as (center_x, center_y, width, height). These
  values are normalized in [0, 1], relative to the size of each individual image in the batch (disregarding
  possible padding). You can use [post_process()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process) to retrieve the
  unnormalized bounding boxes.
- **auxiliary_outputs** (`list[Dict]`, _optional_) -- Optional, only returned when auxilary losses are activated (i.e. `config.auxiliary_loss` is set to
  _True_) and labels are provided. It is a list of dictionaries containing the two above keys (`logits`
  and `pred_boxes`) for each decoder layer.
- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) -- Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) -- Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.</retdesc></docstring>
The [DetrForObjectDetection](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForObjectDetection) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import DetrFeatureExtractor, DetrForObjectDetection
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = DetrFeatureExtractor.from_pretrained('facebook/detr-resnet-50')
>>> model = DetrForObjectDetection.from_pretrained('facebook/detr-resnet-50')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> # model predicts bounding boxes and corresponding COCO classes
>>> logits = outputs.logits
>>> bboxes = outputs.pred_boxes
```






</div></div>

<h2 id="transformers.DetrForSegmentation">DetrForSegmentation</h2>

<div class="docstring">

<docstring><name>class transformers.DetrForSegmentation</name><anchor>transformers.DetrForSegmentation</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1482</source><parameters>[{"name": "config", "val": ": DetrConfig"}]</parameters><paramsdesc>- **config** ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) --
  Model configuration class with all the parameters of the model. Initializing with a config file does not
  load the weights associated with the model, only the configuration. Check out the
  [from_pretrained()](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

DETR Model (consisting of a backbone and encoder-decoder Transformer) with a segmentation head on top, for tasks
such as COCO panoptic.


This model inherits from [PreTrainedModel](/docs/transformers/v4.14.1/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.DetrForSegmentation.forward</anchor><source>https://github.com/huggingface/transformers/blob/v4.14.1/src/transformers/models/detr/modeling_detr.py#L1504</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "pixel_mask", "val": " = None"}, {"name": "decoder_attention_mask", "val": " = None"}, {"name": "encoder_outputs", "val": " = None"}, {"name": "inputs_embeds", "val": " = None"}, {"name": "decoder_inputs_embeds", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Padding will be ignored by default should you provide it.

  Pixel values can be obtained using [DetrFeatureExtractor](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor). See
  [transformers.DetrFeatureExtractor.__call__()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.__call__) for details.

- **pixel_mask** (`torch.LongTensor` of shape `(batch_size, height, width)`, _optional_) --
  Mask to avoid performing attention on padding pixel values. Mask values selected in `[0, 1]`:

  - 1 for pixels that are real (i.e. **not masked**),
  - 0 for pixels that are padding (i.e. **masked**).

  [What are attention masks?](../glossary#attention-mask)

- **decoder_attention_mask** (`torch.LongTensor` of shape `(batch_size, num_queries)`, _optional_) --
  Not used by default. Can be used to mask object queries.
- **encoder_outputs** (`tuple(tuple(torch.FloatTensor)`, _optional_) --
  Tuple consists of (`last_hidden_state`, _optional_: `hidden_states`, _optional_:
  `attentions`) `last_hidden_state` of shape `(batch_size, sequence_length, hidden_size)`,
  _optional_) is a sequence of hidden-states at the output of the last layer of the encoder. Used in the
  cross-attention of the decoder.
- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Optionally, instead of passing the flattened feature map (output of the backbone + projection layer), you
  can choose to directly pass a flattened representation of an image.
- **decoder_inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, num_queries, hidden_size)`, _optional_) --
  Optionally, instead of initializing the queries with a tensor of zeros, you can choose to directly pass an
  embedded representation.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/v4.14.1/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`List[Dict]` of len `(batch_size,)`, _optional_) --
  Labels for computing the bipartite matching loss, DICE/F-1 loss and Focal loss. List of dicts, each
  dictionary containing at least the following 3 keys: 'class_labels', 'boxes' and 'masks' (the class labels,
  bounding boxes and segmentation masks of an image in the batch respectively). The class labels themselves
  should be a `torch.LongTensor` of len `(number of bounding boxes in the image,)`, the boxes a
  `torch.FloatTensor` of shape `(number of bounding boxes in the image, 4)` and the masks a
  `torch.FloatTensor` of shape `(number of bounding boxes in the image, height, width)`.</paramsdesc><paramgroups>0</paramgroups><rettype>[DetrSegmentationOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrSegmentationOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [DetrSegmentationOutput](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.models.detr.modeling_detr.DetrSegmentationOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([DetrConfig](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` are provided)) -- Total loss as a linear combination of a negative log-likehood (cross-entropy) for class prediction and a
  bounding box loss. The latter is defined as a linear combination of the L1 loss and the generalized
  scale-invariant IoU loss.
- **loss_dict** (`Dict`, _optional_) -- A dictionary containing the individual losses. Useful for logging.
- **logits** (`torch.FloatTensor` of shape `(batch_size, num_queries, num_classes + 1)`) -- Classification logits (including no-object) for all queries.
- **pred_boxes** (`torch.FloatTensor` of shape `(batch_size, num_queries, 4)`) -- Normalized boxes coordinates for all queries, represented as (center_x, center_y, width, height). These
  values are normalized in [0, 1], relative to the size of each individual image in the batch (disregarding
  possible padding). You can use [post_process()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process) to retrieve the
  unnormalized bounding boxes.
- **pred_masks** (`torch.FloatTensor` of shape `(batch_size, num_queries, height/4, width/4)`) -- Segmentation masks logits for all queries. See also
  [post_process_segmentation()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_segmentation) or
  [post_process_panoptic()](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrFeatureExtractor.post_process_panoptic) to evaluate instance and panoptic
  segmentation masks respectively.
- **auxiliary_outputs** (`list[Dict]`, _optional_) -- Optional, only returned when auxiliary losses are activated (i.e. `config.auxiliary_loss` is set to
  _True_) and labels are provided. It is a list of dictionaries containing the two above keys (`logits`
  and `pred_boxes`) for each decoder layer.
- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) -- Sequence of hidden-states at the output of the last layer of the decoder of the model.
- **decoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the decoder at the output of
  each layer plus the initial embedding outputs.
- **decoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the decoder's cross-attention layer, after the
  attention softmax, used to compute the weighted average in the cross-attention heads.
- **encoder_last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) -- Sequence of hidden-states at the output of the last layer of the encoder of the model.
- **encoder_hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the encoder at the output of
  each layer plus the initial embedding outputs.
- **encoder_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights of the encoder, after the attention softmax, used to
  compute the weighted average in the self-attention heads.</retdesc></docstring>
The [DetrForSegmentation](/docs/transformers/v4.14.1/en/model_doc/detr#transformers.DetrForSegmentation) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import DetrFeatureExtractor, DetrForSegmentation
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = DetrFeatureExtractor.from_pretrained('facebook/detr-resnet-50-panoptic')
>>> model = DetrForSegmentation.from_pretrained('facebook/detr-resnet-50-panoptic')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> # model predicts COCO classes, bounding boxes, and masks
>>> logits = outputs.logits
>>> bboxes = outputs.pred_boxes
>>> masks = outputs.pred_masks
```






</div></div>
